--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:cloudstorage
+
+spring.servlet.multipart.enabled=true
+
+#Max file size.Default is 10MB
+spring.servlet.multipart.max-file-size=5MB
+
+#Max request size.Default is 10MB
+spring.servlet.multipart.max-request-size=5MB
+
